# workshop-keeping-up-with-openai-et-al

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.sh
rag/: Data for RAG.ipynb  Retrieval Augmented Generation.ipynb
rag_and_fine_tuning/: Data for RAG.ipynb  Fine_tuning_for__Better__Answer_Generation_for_RAG.ipynb
